rebase and layout issues

--- a/geoportailv3/static/less/navbars.less
+++ b/geoportailv3/static/less/navbars.less
@@ -52,7 +52,7 @@ header {
   bottom: auto;
   right: 0px;
 
-  li {
+  > li {
     display: block;
     float: right;
     > a {
